Fixed an issue that the startup of a server took longer than 3 sec (which is the wait time)